Simplify run-demo.bat to remove extra echo messages